--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 # Site settings
-title: Rob Hinds
-twitter_username: rob_hinds
-name: Rob Hinds
+title: Alexander Samsig
+twitter_username: Asamsig
+name: Alexander Samsig
+location: Trondheim, Norway
+picture: https://avatars0.githubusercontent.com/u/2983219?s=460&v=4
 
 # Build settings
 markdown: kramdown
@@ -9,124 +11,88 @@ markdown: kramdown
 #User specific content
 #Links that will appear in the navbar
 primarylinks:
- - title: Blog
-   url: http://automateddeveloper.blogspot.com/
  - title: GitHub
-   url: https://github.com/robhinds
+   url: https://github.com/Asamsig
  - title: StackOverflow
-   url: http://stackoverflow.com/users/258813/rhinds
- - title: DZone
-   url: https://dzone.com/users/899489/rhinds.html
+   url: https://stackoverflow.com/users/1882855/asamsig
  - title: LinkedIn
-   url: https://www.linkedin.com/pub/rob-hinds/21/361/3b1
+   url: https://www.linkedin.com/in/alexander-samsig/
 
 #Any buzzword skills you want to include
 skills:
  - Scala
- - Akka-http
- - Microservices
+ - Playframework
  - Slick
- - Product management
- - API design
- - Groovy
- - Spring MVC/Boot/Social
- - Gradle
+ - Akka
  - Java
- - JPA
  - SQL
  - REST
+ - RabbitMQ
  - Technical Architecture
- - Machine learning
-
-#Blogfeed is optional - including this will add JS to call the feed and populate blog list
-blogfeed: http://automateddeveloper.blogspot.com/feeds/posts/default?alt=json
 
 #Work experience is required
 roles:
- - title: CTO
-   start: 2017
-   end: Ongoing
-   employer: Basement Crowd
-   description: Legaltech startup producing a range of innovative legal products. Products include <a href="https://www.juriosity.com" taget="_blank">Juriosity</a>, <a href="https://www.fromcounsel.com" taget="_blank">FromCounsel</a>, <a href="https://www.sparqa.com" taget="_blank">Sparqa</a>.
- - title: Senior Engineer
-   start: 2016
-   end: 2017
-   employer: Emerald Street Ventures
-   description: Emerald Street Ventures was established as an incubator vehicle for the development of a number of software and legal-tech projects, and a rapidly growing, London-based start-up using innovative technologies to revolutionise and change the software and legal-tech landscape. Working with a range of cutting edge technologies and techniques including Scala, Cassandra, CoreOS, a variety of Machine Learning techniques.
- - title: Senior Engineer
-   start: 2012
-   end: 2016
-   employer: Covestor
-   description: Covestor is an investment marketplace startup that was successfully acquired by Interactive Brokers in 2015. <br/> Working as a senior engineer, I worked closely with the CTO and across the full-stack, I was involved in all aspects of the technology including the website and back-end services.
- - title: Associate Manager
-   start: 2005
-   end: 2012
-   employer: Accenture
-   description: Working on a range of functional and technical roles, primarily working on client sites in Financial Services in London and Europe.
+ - title: Consul&shy;tant
+   start: 2018
+   employer: EVRY AS
+   description:
+ - title: Software Developer
+   start: 2015
+   end: 2018
+   employer: WTW AS
+   description: Full stack development in Scala, with use of Java interop where necessary. Using technologies such as Play Framework, Akka, Slick, Op-Rabbit, Specs2, SBT.
+     <br><br>
+     Deploying applications to the cloud using AWS.
+     <br><br>
+     Some maintenance and further development of PHP.
 
 #Education is required
 education:
- - level: Bachelor of Science (B.Sc.)
-   date: 2003
-   subject: Artificial Intelligence and Computer Science
-   school: University of Birmingham
+ - level: Bachelor in Sofware Develop&shy;ment
+   date: 2015
+   subject: Computer Science
+   school: Copenhagen Business Academy
 
 #This section is optional (as is the image link below)
-coursera:
-   profileurl: https://www.coursera.org/user/i/c6362b4056f755a04bef6a791a62102b
+certifications:
+   profileurl: https://www.youracclaim.com/users/alexander-samsig
    courses:
-    - title: Functional Programming Principles in Scala
-      link: https://www.coursera.org/course/progfun
-      optionalimage: https://d1z850dzhxs7de.cloudfront.net/topics/progfun/small-icon.hover.png
-      date: September 16, 2013
-    - title: Algorithms Design and Analysis, Part 1
-      link: https://www.coursera.org/course/progfun
-      optionalimage: https://d1z850dzhxs7de.cloudfront.net/topics/algo/small-icon.hover.png
-      date: April 28, 2014
-
-#This section is optional - embeds slideshows from speakerdeck
-# to get the speakerdeck ID copy the embed code and look for the data-it attribute
-speakerdeck:
-   profileurl: https://speakerdeck.com/robhinds
-   talks:
-    - title: Agile Machine Learning - from Theory to Production
-      speakerdeckId: 94f0070c4e434ec79fe9b4eb2cb574e0
-      conference: W-JAX Conference, Munich 2017 (London 2017)
-    - title: Product Management for Engineers
-      speakerdeckId: ec84f2f56e9743afb0675b1eeeb6b6ce
-      conference: API Conference, Berlin 2018
+    - title: Principles of Reactive Architecture
+      link: https://www.youracclaim.com/badges/866c5bf5-b517-4198-8a15-d96c3e978131/
+      optionalimage: https://images.youracclaim.com/images/c37082a5-c2dc-41a3-b3ff-9e4b33bb746f/Princ%2Bof%2Breact%2Barch%2Bv1.png
+      imagesize: 110
+      date: December 15, 2018
+    - title: Scala Programming for Data Science - Level 2
+      link: https://www.youracclaim.com/badges/3c04c946-cbb7-4253-974f-874ed5566070
+      optionalimage: https://images.youracclaim.com/images/29e051f5-d33a-45ea-b5c3-64156561c614/Scala%2BPgrm%2Bfor%2BData%2BSci%2BLevel%2B2%2B-%2BCC.png
+      imagesize: 110
+      date: July 27, 2017
+    - title: Scala Programming for Data Science - Level 1
+      link: https://www.youracclaim.com/badges/8d469fe6-0a72-4757-8be1-1cd3198e2c19
+      optionalimage: https://images.youracclaim.com/images/cb0a29a2-a96f-485f-92ad-0dee9da015db/Scala%2BPgrm%2Bfor%2BData%2BSci%2BLevel%2B1%2B-%2BCC.png
+      imagesize: 110
+      date: July 02, 2017
 
 #List of interesting Github repo/projects to include - optional
 github:
- - robhinds/robhinds.github.io
- - robhinds/ScaLambda
- - robhinds/opinionated-akka-http
- - robhinds/food2vec
- - robhinds/microservices
- - robhinds/spring-social-geeklist
- - robhinds/spring-social-stackoverflow
- - robhinds/genotype
- - robhinds/footweets
- - robhinds/ElasticSearchGradle
+ - Asamsig/playwithslickcodegen
+ - Asamsig/play-with-scalajs-example
+ - Asamsig/scalajs-type-provision-demo
+ - Asamsig/Scala.JS-Electron-WeatherApp
 
 #Stackoverflow flair is optional
-stackoverflow:
-   profileurl: http://stackoverflow.com/users/258813/rhinds
-   flairimageurl: http://stackoverflow.com/users/flair/258813.png
+#stackoverflow:
+#   profileurl: https://stackoverflow.com/users/1882855/asamsig
+#   flairimageurl: https://stackoverflow.com/users/flair/1882855.png
 
 intro: |
-  I am an engineer with 15 years experience working in technology. I have primarily worked on the JVM, but have worked across a broad range of technologies thereon: Java, Groovy, Android, Coldfusion and most recently Scala. As well as spending a reasonable amount of time building applications for the web, which has given me an exposure to a range of javascript technologies over the years, through jQuery, extjs, knockout, backbone and most recently to React. <br/><br/>
-  I enjoy building interesting products, with a good Product Management focus and a good emphasis on good engineering principles and clean code (having worked across differing languages on the JVM, I recognise that good code is contextual).<br/><br/>
-  I have worked in large scale consultancy roles across Europe as well as a mix of startup experience (including one that was acquired) and I am currently the Chief Technology Officer at a legal-tech startup called <a href="https://www.basementcrowd.com" target="_blank">Basement Crowd</a> where we are building innovative products to serve the legal industry.
-
-#An additional info freetext section is optional at the bottom of the page - can be text or HTML
-additionalinfo: |
-   <strong>Scala</strong>: My current role uses Scala as the primary language and have been building applications in Scala for the last two years. I am familiar with a range of Scala libraries, such as <a target="_blank" href="http://automateddeveloper.blogspot.com/2017/12/an-opinionated-guide-to-building-apis.html"> Akka-Http for building microservices</a> and <a target="_blank" href="http://automateddeveloper.blogspot.com/2018/09/generic-programming-with-scala.html"> Shapeless for generic programming</a>, as well as familiar with a range of <a target="_blank" href="https://basementcrowd.com/2018/11/28/scala-the-aux-pattern-path-dependent-types/" >functional programming techniques available</a>.<br/><br/>
-   <strong>Java</strong>: I am experienced in a variety of Java API’s and frameworks. I have worked with Spring 4, Spring Boot, JPA (Hibernate and EclipseLink) in addition to others. <br/><br/>
-   <strong>Groovy</strong> I have used Groovy as a language in production for ~4 years and I am familiar with many of the languages features (such as writing <a target='_blank' href="https://dzone.com/articles/functional-programming-groovy">Functional Programming style groovy</a>) and quirks (such as <a target="_blank" href="https://dzone.com/articles/groovy-retrospective-an-addendum-memory-usage-perm">memory leak issues</a>). <br/><br/>
-   <strong>Cloud platforms</strong>: I have primarily used AWS for running production apps on the cloud. I have experience setting up, configuring and running applications using a range of AWS offerings, including EC2, RDS, S3, Cogito, <a target="_blank" href="http://automateddeveloper.blogspot.com/2018/05/serverless-with-aws-lambda-scala.html">Lambda</a> and its more recent <a target="_blank" href="http://automateddeveloper.blogspot.com/2018/10/machine-learning-with-aws-scala.html">Machine Learning capabilities</a>.<br/><br/>
-   <strong>Web Development</strong>: Through building web applications, I have also worked with various client side technology, having used jQuery, Bootstrap, LESS, SASS, Backbone/Underscore/Require. More recently I have written React applications (primarily using the Create React App framework, and extending them)<br/><br/>
-   <strong>Development Control</strong>: I have a good knowledge of application life-cycle management and have worked with SVN, Git, Maven, Gradle, Sonar, Jenkins, TeamCity, etc. I have experience with an array of testing tools and technologies.<br/><br/>
-   I have also gained experience and knowledge of other technologies from several side projects and research that I have undertaken in my free time, including Android, a variety of social APIs (Twitter etc) and cloud platforms such as CloudFoundry/OpenShift/AppFog/AWS. <br/><br/>
-   As part of Nerdability, I created, and am now primary contributor to, two Spring projects - <a target='_blank' href="https://github.com/robhinds/spring-social-geeklist">Spring-Social-Geeklist</a> and <a target='_blank' href="https://github.com/nerdability/spring-social-khan-academy">Spring-Social-Khan-Academy</a>, which provide core integration with those third-party APIs on top of the Spring Social framework. They are both listed as community projects: <a target='_blank' href="http://projects.spring.io/spring-social/">http://projects.spring.io/spring-social/</a>. <br/><br/>
-   I write a blog covering technical and opinion articles that can be found here: <a target='_blank' href="http://automateddeveloper.blogspot.com/">automateddeveloper.blogspot.com</a> (I am also a <a target='_blank' href="https://dzone.com/users/899489/rhinds.html">DZone MVB</a>)
+  I'm a tech enthusiast, I spend a lot time learning, reading and going to meetups about new technologies, also those out of my specific area.
+  <br>
+  <br>
+  Currently Scala is my go to language, but I've previously worked with C#, Java, Android, PHP, and web development and all that comes with that.
+  <br>
+  <br>
+  Since being introduced with Scala I've set my sights on things such as fast reactive systems, and Big Data processing.
+  <br>
+  <br>
+  Currently my fascination is around Scala.JS and Akka (reactive streams).
